changed cart component and fixed overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,32 @@ header {
 
 .cart {
   font-size: 1rem;
+  position: static;
+  max-height: 60vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.cart::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+.cart::-webkit-scrollbar:vertical {
+    width:10px;
+}
+
+.cart::-webkit-scrollbar:horizontal {
+    height: 10px;
+}
+
+.cart::-webkit-scrollbar-thumb {
+    background-color: #1e2330;
+    border-radius: 20px;
+    border: 2px solid rgba(145, 145, 145, 0.26);
+}
+
+.cart::-webkit-scrollbar-track {
+    border-radius: 10px;  
 }
 
 @media screen and (max-width: 700px){
@@ -38,4 +64,34 @@ header {
   header {
     font-size: 1.5rem;
   }
+}
+
+@media screen and (min-width: 768px){
+  .cart {
+    position: fixed;
+    width: inherit;
+    padding-right: 40px;
+  }
+  .cart::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+.cart::-webkit-scrollbar:vertical {
+    width:10px;
+}
+
+.cart::-webkit-scrollbar:horizontal {
+    height: 10px;
+}
+
+.cart::-webkit-scrollbar-thumb {
+    background-color: #1e2330;
+    border-radius: 20px;
+    border: 2px solid rgba(145, 145, 145, 0.26);
+}
+
+.cart::-webkit-scrollbar-track {
+    border-radius: 10px;  
+}
+
 }
